test/files/neg/t12813c.check
t12813c.scala:6: error: abcdefghij is an ambiguous name on import
import O.{a => abcdefghij, a => abcdefghij}
               ^
1 error
